--- a/node-admin/package.json
+++ b/node-admin/package.json
@@ -7,12 +7,16 @@
     "start": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.8",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
