--- a/react-admin/package.json
+++ b/react-admin/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@popperjs/core": "^2.11.8",
     "@types/chart.js": "^2.9.41",
     "@types/feather-icons": "^4.29.4",
@@ -20,8 +21,10 @@
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
