--- a/react-admin/package.json
+++ b/react-admin/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.2.6",
     "@types/chart.js": "^2.9.41",
     "@types/feather-icons": "^4.29.4",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "feather-icons": "^4.29.2",
@@ -23,7 +25,10 @@
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
