--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
     "@popperjs/core": "^2.11.8",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/chart.js": "^2.9.41",
     "@types/feather-icons": "^4.29.4",
@@ -23,6 +24,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-facebook-login": "^4.1.1",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-facebook-login": "^4.1.11",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
