--- a/node-admin/.gitignore
+++ b/node-admin/.gitignore
@@ -50,7 +50,6 @@ web_modules/
 
 # Optional npm cache directory
 .npm
-
 # Optional eslint cache
 .eslintcache
 
@@ -78,6 +77,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env.json
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -128,3 +128,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+.vercel
