--- a/node-admin/package.json
+++ b/node-admin/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "googleapis": "^140.0.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3"
