--- a/user-panel/package.json
+++ b/user-panel/package.json
@@ -24,8 +24,9 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
-    "react-facebook-login": "^4.1.1",
     "react-feather": "^2.0.10",
+    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
@@ -37,7 +38,6 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/react-facebook-login": "^4.1.11",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
