--- a/node-admin/package.json
+++ b/node-admin/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "googleapis": "^140.0.1",
     "joi": "^17.13.3",
